Update Botanical Brewery recipe handling
- renamed block entity class to BotanicalBreweryBlockEntity, matching related class names
- defined the brewery as a "quick pickup" item source for flower interactions
- craft remainders are returned now (Botania doesn't define any recipes with remainders itself, though)
- recipe matching reuses vanilla shapeless matching logic for any inputs other than the brewing container item
- recipe display mods show all registered brewing container items, not just those added by Botania itself
- fixed item removal from inactive brewery not working